--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ body {
   margin: auto;
   padding-top: 54px;
   display: flex;
+  padding-bottom: 54px;
 }
 .home-image path {
   opacity: 0;
@@ -118,4 +119,107 @@ path.current-floor {
   padding: 16px 36px;
   cursor: pointer;
   font-size: 16px;
+}
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transform: scale(0);
+  transition: opacity 0.2s;
+}
+.is-open {
+  opacity: 1;
+  transform: scale(1);
+}
+.modal-dialog {
+  position: relative;
+  max-width: 1000px;
+  min-height: 565px;
+  background-color: #fff;
+  flex-grow: 1;
+  display: flex;
+  opacity: 0;
+  transform: translateY(-10%);
+  transition: transform 0.2s, opacity 0.2s;
+  transition-delay: 0.2s;
+}
+.is-open > .modal-dialog {
+  opacity: 1;
+  transform: translateY(0);
+}
+.modal-image {
+  background: #ebebeb;
+  width: 60%;
+  text-align: center;
+  padding: 50px;
+}
+.flats path {
+  opacity: 0;
+  cursor: pointer;
+}
+.flats path:hover {
+  opacity: 1;
+}
+path.current-flat {
+  opacity: 1;
+}
+.flat-link.current-link {
+  color: #3596f5;
+  text-decoration: underline;
+}
+.modal-counter {
+  font-size: 48px;
+}
+.moda-title {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 29px;
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+.modal-info {
+  padding: 50px 46px;
+  width: 40%;
+}
+.flat-list {
+  padding: 0;
+  list-style: none;
+  margin-top: 55px;
+}
+.flat-item {
+  margin-bottom: 10px;
+}
+.flat-link {
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+  text-decoration: none;
+}
+.flat-link:hover {
+  color: #3596f5;
+  text-decoration: underline;
+}
+.modal-alert {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  font-style: italic;
+  color: #635854;
+  margin-top: 56px;
+}
+.modal-close-button {
+  position: absolute;
+  top: 38px;
+  right: 27px;
+  border: none;
+  background-color: #fff;
+  cursor: pointer;
 }
